<resources>
    <string name="app_name">VirgoLib</string>

    <!--    占位符
%1$s%2$d%3$.2f
%n：序号，第n个参数；
$s：任意字符串；
$d：任意数字（整型）；
$f：任意数字（浮点型， .2f: 保留两位小数）；
-->
    <string name="print_log">print=> %1$s</string>
    <string name="concat_str">拼接_%1$s_</string>
    <string name="concat_decimal">拼接_%1$d_</string>
    <string name="concat_float">拼接_%1$.2f_</string>

    <string name="str_underline"><u>测试</u></string>

    <string name="camera_play_pause">播放|停止</string>
    <string name="camera_capture">拍照</string>
    <string name="camera_record">录像</string>
    <string name="button_text">点我</string>
    <string name="radio_button_text1">生存</string>
    <string name="radio_button_text2">毁灭</string>
    <string name="radio_button_text3">想想</string>
    <string name="fragment_listview">ListView</string>
    <string name="fragment_gridview">GridView</string>
    <string name="fragment_recyclevieew">RecycleVieew</string>
    <string name="bar_color_value">#%1$s%2$s%3$s</string>

    <string name="demo_capture">截屏</string>
    <string name="demo_scroll_text">全屏走字</string>
    <string name="demo_album">相册</string>
    <string name="demo_text_clock">文字钟</string>

    <string name="cur_page">第 %1$d 页</string>
    <string name="all_page">共 %1$d 页</string>

</resources>