<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_block_padding"
    tools:context=".mainbody.activity.demo.DemoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onScreenCap"
        android:text="@string/demo_capture"
        android:textSize="@dimen/page_tv_size"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:padding="@dimen/page_button_padding"
        android:layout_marginBottom="@dimen/page_button_margin"
        android:background="@drawable/page_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onScrollText"
        android:text="@string/demo_scroll_text"
        android:textSize="@dimen/page_tv_size"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:padding="@dimen/page_button_padding"
        android:layout_marginBottom="@dimen/page_button_margin"
        android:background="@drawable/page_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onAlbum"
        android:text="@string/demo_album"
        android:textSize="@dimen/page_tv_size"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:padding="@dimen/page_button_padding"
        android:layout_marginBottom="@dimen/page_button_margin"
        android:background="@drawable/page_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onTextClock"
        android:text="@string/demo_text_clock"
        android:textSize="@dimen/page_tv_size"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:padding="@dimen/page_button_padding"
        android:layout_marginBottom="@dimen/page_button_margin"
        android:background="@drawable/page_button" />

</LinearLayout>