<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainbody.activity.oricom.FragmentsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_block_padding"
        android:background="@color/color_HTL"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg_fragment1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_listview"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:text="@string/fragment_listview"
                android:textAlignment="center"
                android:textColor="@drawable/text_selector"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_JGH"/>

            <RadioButton
                android:id="@+id/radio_gridview"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/fragment_gridview"
                android:textAlignment="center"
                android:textColor="@drawable/text_selector"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_JGH"/>

            <RadioButton
                android:id="@+id/radio_recycleview"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/fragment_recyclevieew"
                android:textAlignment="center"
                android:textColor="@drawable/text_selector"/>
        </RadioGroup>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_container1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite">
    </androidx.viewpager.widget.ViewPager>
</LinearLayout>